2009-03-10 fabien
* add a macro used to display localised information in a part of the payslip
* increment version number because of the new style of the payslip

2009-01-28 fabien
* add salaire_net_imposable base_amount category

2008-01-24 fabien
* add version number

2007-11-09 fabien
* Initial revision